--- a/hige/.tmp/serve/app/index_light.css
+++ b/hige/.tmp/serve/app/index_light.css
@@ -89,6 +89,145 @@ body {
   }
 }
 /* Custom, iPhone Retina */
+#itinerary {
+  padding-left: 125px;
+  /***************************** Required styles *****************************/
+  /**
+   * For the correct positioning of the placeholder element, the dnd-list and
+   * it's children must have position: relative
+   */
+  /***************************** Dropzone Styling *****************************/
+  /**
+   * The dnd-list should always have a min-height,
+   * otherwise you can't drop to it once it's empty
+   */
+  /**
+   * The dnd-lists's child elements currently MUST have
+   * position: relative. Otherwise we can not determine
+   * whether the mouse pointer is in the upper or lower
+   * half of the element we are dragging over. In other
+   * browsers we can use event.offsetY for this.
+   */
+  /**
+   * Reduce opacity of elements during the drag operation. This allows the user
+   * to see where he is dropping his element, even if the element is huge. The
+   * .dndDragging class is automatically set during the drag operation.
+   */
+  /**
+   * The dndDraggingSource class will be applied to the source element of a drag
+   * operation. It makes sense to hide it to give the user the feeling that he's
+   * actually moving it. Note that the source element has also .dndDragging class.
+   */
+  /**
+   * An element with .dndPlaceholder class will be added as child of the dnd-list
+   * while the user is dragging over it.
+   */
+  /***************************** Element Selection *****************************/
+  /***************************** Element type specific styles *****************************/
+  /***************************** Toolbox *****************************/
+  /***************************** Trashcan *****************************/
+}
+#itinerary ul[dnd-list],
+#itinerary ul[dnd-list] > li {
+  position: relative;
+}
+#itinerary ul[dnd-list],
+#itinerary ul[dnd-list] > li {
+  position: relative;
+}
+#itinerary .dropzone ul[dnd-list] {
+  min-height: 42px;
+  margin: 0px;
+  magin-left: 15px;
+  padding-left: 0px;
+}
+#itinerary .dropzone li {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  display: block;
+  padding: 0px;
+}
+#itinerary .dropzone .dndDragging {
+  opacity: 0.7;
+}
+#itinerary .dropzone .dndDraggingSource {
+  display: none;
+}
+#itinerary .dropzone .dndPlaceholder {
+  background-color: #ddd;
+  min-height: 42px;
+  display: block;
+  position: relative;
+}
+#itinerary .dropzone .selected .item {
+  color: #3c763d;
+  background-color: #dff0d8;
+}
+#itinerary .dropzone .selected .box {
+  border-color: #d6e9c6;
+}
+#itinerary .dropzone .selected .box > h3 {
+  color: #3c763d;
+  background-color: #dff0d8;
+  background-image: linear-gradient(to bottom, #dff0d8 0, #d0e9c6 100%);
+  border-color: #d6e9c6;
+}
+#itinerary .dropzone .item {
+  padding: 10px 15px;
+}
+#itinerary .dropzone .container-element {
+  margin: 10px;
+}
+#itinerary .dropzone .container-element .column {
+  float: left;
+  width: 50%;
+}
+#itinerary .toolbox ul {
+  list-style: none;
+  padding-left: 0px;
+  cursor: move;
+}
+#itinerary .toolbox button {
+  margin: 5px;
+  width: 123px;
+  opacity: 1.0;
+}
+#itinerary .toolbox .dndDragging {
+  opacity: 0.5;
+}
+#itinerary .toolbox .dndDraggingSource {
+  opacity: 1.0;
+}
+#itinerary .trashcan ul {
+  list-style: none;
+  padding-left: 0px;
+}
+#itinerary .trashcan img {
+  width: 100%;
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+#itinerary .trashcan .dndDragover img {
+  width: 100%;
+  -webkit-filter: none;
+  -moz-filter: none;
+  filter: none;
+}
+#itinerary .trashcan .dndPlaceholder {
+  display: none;
+}
+/*==========  Non-Mobile First Method  ==========*/
+/* Large Devices, Wide Screens */
+/* Medium Devices, Desktops */
+/* Small Devices, Tablets */
+/* Extra Small Devices, Phones */
+@media only screen and (max-device-width: 480px), only screen and (max-width: 480px) {
+  .formContainer {
+    padding: 20px 0;
+  }
+}
+/* Custom, iPhone Retina */
 #myPath {
   width: 100%;
   height: 100%;
