--- a/hige/.tmp/serve/app/index_dark.css
+++ b/hige/.tmp/serve/app/index_dark.css
@@ -90,6 +90,7 @@ body {
 }
 /* Custom, iPhone Retina */
 #itinerary {
+  color: #000;
   padding-left: 125px;
   /***************************** Required styles *****************************/
   /**
@@ -127,6 +128,11 @@ body {
   /***************************** Toolbox *****************************/
   /***************************** Trashcan *****************************/
 }
+#itinerary .itinerary-container {
+  margin-left: 10%;
+  padding-top: 10px;
+  width: 65%;
+}
 #itinerary ul[dnd-list],
 #itinerary ul[dnd-list] > li {
   position: relative;
@@ -134,11 +140,19 @@ body {
 #itinerary ul[dnd-list],
 #itinerary ul[dnd-list] > li {
   position: relative;
+}
+#itinerary .dropzone.box {
+  margin-left: 25px;
+  background-color: #666;
+}
+#itinerary .dropzone.box h3 {
+  margin-left: 5%;
+  padding-top: 1%;
+  color: #fff;
 }
 #itinerary .dropzone ul[dnd-list] {
   min-height: 42px;
   margin: 0px;
-  magin-left: 15px;
   padding-left: 0px;
 }
 #itinerary .dropzone li {
@@ -173,14 +187,24 @@ body {
   border-color: #d6e9c6;
 }
 #itinerary .dropzone .item {
+  color: #000;
   padding: 10px 15px;
 }
 #itinerary .dropzone .container-element {
+  color: #000;
+  background: #999;
   margin: 10px;
 }
+#itinerary .dropzone .container-element h3 {
+  color: #fa6d05;
+  margin-left: 5%;
+  padding-top: 1%;
+}
 #itinerary .dropzone .container-element .column {
-  float: left;
-  width: 50%;
+  margin-left: 2%;
+  margin-right: 2%;
+  margin-bottom: 2%;
+  width: 96%;
 }
 #itinerary .toolbox ul {
   list-style: none;
